fix: row slot should not have extra padding

--- a/packages/drip-table/src/layouts/table/index.module.less
+++ b/packages/drip-table/src/layouts/table/index.module.less
@@ -51,7 +51,7 @@
   & tfoot > tr > td,
   & tfoot > tr > th,
   & .@{prefixCls}-virtual-cell {
-    &:not(@{prefixCls}--slot) {
+    &:not(.@{prefixCls}--slot) {
       padding: 16px;
     }
 
@@ -406,7 +406,7 @@
   &&-small tfoot > tr > td,
   &&-small tfoot > tr > th,
   &&-small .@{prefixCls}-virtual-cell {
-    &:not(@{prefixCls}--slot) {
+    &:not(.@{prefixCls}--slot) {
       padding: 8px;
     }
   }
@@ -418,7 +418,7 @@
   &&-middle tfoot > tr > td,
   &&-middle tfoot > tr > th,
   &&-middle .@{prefixCls}-virtual-cell {
-    &:not(@{prefixCls}--slot) {
+    &:not(.@{prefixCls}--slot) {
       padding: 12px 8px;
     }
   }
